# nais_admin

./: .gitignore  Cargo.toml  README.md  anderson.wasm  board.wasm  client.pem  nais_canister.did  nft.wasm  token.wasm
src/: command.rs  main.rs
src/command/: mod.rs
